<resources>
    <string name="app_name">Signinandout</string>
    <string name="regis">Register</string>
    <string name="create">Create New Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="rbtn">Register</string>
    <string name="login">Already Registered? Login Here</string>


    <string name="lregis">Login Form</string>
    <string name="lemail">Email</string>
    <string name="lpassword">Password</string>
    <string name="lrbtn">Login </string>
    <string name="llogin">New Here? Create Account</string>


    <string name="nine">9</string>
    <string name="_eight">8</string>
    <string name="_seven">7</string>
    <string name="_six">6</string>
    <string name="_five">5</string>
    <string name="_four">4</string>
    <string name="_three">3</string>
    <string name="_two">2</string>
    <string name="_one">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="cons">C</string>
    <string name="div">/</string>
    <string name="ans">=</string>
    <string name="add_expense_amount">Add_expense amount</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="add_expenses">Add Expenses</string>


</resources>